--- a/estilos/solicitudes.css
+++ b/estilos/solicitudes.css
@@ -2,13 +2,32 @@ body {
     background-color: #f0f4f8;
   }
   
-  form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 5px;
+
+  head{
+
+    display: flex;
+
+
   }
+
+  .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #ccc;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+  
+  .logo img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+  
   
   label {
     display: block;
@@ -44,27 +63,48 @@ body {
     outline: none;
   }
   
-  /* Responsive styles */
   @media screen and (max-width: 480px) {
+
+
+    /* Estilo del círculo que contiene el logo */
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Estilo del logo */
+  .logo {
+    width: 100px;
+    height: 100px;
+    margin-top: 10px;
+  }
+
     form {
       max-width: 100%;
       padding: 10px;
     }
-    
+  
     label {
       font-size: 14px;
     }
-    
+  
     select,
     textarea {
       margin-bottom: 10px;
       font-size: 14px;
+      max-width: 100%; /* Establece un ancho máximo para el textarea */
+      overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
     }
-    
+  
     button[type="submit"] {
       font-size: 14px;
       padding: 8px 16px;
     }
   }
-  
   
