--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,6 +2,42 @@ body {
 font-family: Arial, Helvetica, sans-serif;
 }
 
+#botones-eventos{
+  margin-left: 1%;
+  margin-right: 1%;
+  display: flex;
+}
+
+#botones-eventos a{
+  height: 60%;
+  margin-left: auto;
+}
+
+.mensaje{
+  display: flex;
+  justify-content: center;
+}
+
+#lista-eventos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#lista-eventos div{
+display: flex;
+float: left;
+align-items: center;
+}
+
+#boton-asistencia{
+margin-left: 10px;
+}
+
+ul{
+list-style: none;
+}
+
 #logo{
 display:flex;
 justify-content: center;
