--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,32 @@ line-height: 70px;}
   background-color: red;
 }
 
+.no-mostrar {
+  display: none;
+}
+
+.overlay-visible {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; /* Para asegurarse de que esté por encima de otros elementos */
+}
+
+.recuadro-visible {
+  display: block;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
 /* @media print {
   .print-section {
       display: block !important;
